[gd_scene load_steps=4 format=3 uid="uid://uybt0k4ajwyr"]

[ext_resource type="Script" path="res://scenes/ui/floor_option.gd" id="1_f62ap"]

[sub_resource type="LabelSettings" id="LabelSettings_jfsnd"]
font_size = 31

[sub_resource type="LabelSettings" id="LabelSettings_xkgxi"]
font_size = 30

[node name="FloorOption" type="HBoxContainer"]
custom_minimum_size = Vector2(970, 140)
script = ExtResource("1_f62ap")

[node name="FloorLabel" type="Label" parent="."]
custom_minimum_size = Vector2(150, 44)
layout_mode = 2
text = "Floor %s:"
label_settings = SubResource("LabelSettings_jfsnd")
vertical_alignment = 1

[node name="FloorDescription" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Gain more gold
BUT
Enemies are tougher"
label_settings = SubResource("LabelSettings_xkgxi")

[node name="SelectButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 22
text = "Select"
